# -opal-dev-tools

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
architecture-checks/: check_dependencies.py  check_imports.py  check_structure.py
scripts/: run_bandit.sh  run_black.sh  run_eslint.sh  run_flake8.sh  run_isort.sh  run_mypy.sh  run_prettier.sh  run_pytest.sh
