
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opal-dev-tools"
version = "0.1.0"
authors = [
  { name="OpalSuite Team", email="contact@opalsuite.com" },
]
description = "Development tools and architecture checks for OpalSuite"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
check-dependencies = "architecture-checks.check_dependencies:check_dependencies"
check-imports = "architecture-checks.check_imports:check_imports"
check-structure = "architecture-checks.check_structure:check_structure"
